--- a/src/locales/messages.hu.xlf
+++ b/src/locales/messages.hu.xlf
@@ -198,6 +198,10 @@
           <context context-type="sourcefile">src/app/city/city.component.html</context>
           <context context-type="linenumber">88</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/player/player.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="Items" datatype="html">
         <source>Items</source>
