--- a/src/locales/messages.hu.xlf
+++ b/src/locales/messages.hu.xlf
@@ -388,7 +388,7 @@
         <target>Bejelentkezés</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/login/login.component.html</context>
-          <context context-type="linenumber">13</context>
+          <context context-type="linenumber">17</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/user-menu/user-menu.component.html</context>
@@ -427,12 +427,20 @@
           <context context-type="linenumber">9</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="Language" datatype="html">
+        <source>Language</source>
+        <target>Nyelv</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/user-menu/user-menu.component.html</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="Logout" datatype="html">
         <source>Logout</source>
         <target>Kilépés</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/user-menu/user-menu.component.html</context>
-          <context context-type="linenumber">17</context>
+          <context context-type="linenumber">21</context>
         </context-group>
       </trans-unit>
     </body>
